# hajiz

./: .gitignore  BPF_Meta.txt  Cargo.toml  README.md  README_extracted.md
.github/workflows/: ci.yml
docs/: architecture.md  project-spec.md  security-analysis.md  user-guide.md
examples/: basic_isolation.rs  custom_profile.rs
profiles/: browser.toml  document-viewer.toml  firefox.toml  media-player.toml  office.toml  untrusted.toml
src/: error.rs  lib.rs  main.rs
src/audit/: generator.rs  mod.rs  strace.rs
src/cli/: args.rs
src/isolation/: capabilities.rs  cgroups.rs  filesystem.rs  mod.rs  namespaces.rs  network.rs  seccomp.rs
src/kernel/: mod.rs  version.rs
src/profile/: mod.rs  parser.rs  schema.rs
src/runtime/: mod.rs  pidfile.rs  process.rs
src/telemetry/: event.rs  logger.rs  mod.rs
tests/: exploit_tests.rs  integration_tests.rs  namespace_tests.rs  seccomp_tests.rs
