[package]
name = "hagbox"
version = "0.1.0"
edition = "2021"
description = "Secure application sandboxing system in Rust"
license = "MIT"

[dependencies]
clap    = { version = "4.5", features = ["derive"] }
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.8"
thiserror = "1.0"
nix     = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
